Include all supported facets query by occurrence elements
